# zkVote

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  hardhat.config.js  package.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: ATTESTATION_ISSUE_TEMPLATE.md  CODEOWNERS  CONTRACT_ANOMALY_TEMPLATE.md  PERFORMANCE_ISSUE_TEMPLATE.md  SECURITY_ISSUE_TEMPLATE.md  STATUS_CHECK_TEMPLATE.md
.github/workflows/: backend.yml  blockchain-attestation-monitoring.yml  ci-cd.yml  circuit-testing.yml  contract-monitoring.yml  deployment.yml  frontend.yml  performance-monitoring.yaml  security.yml  smart-contracts.yml  status-checks.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs
circuits/: Dockerfile  voting.circom
contracts/: Dockerfile  package.json  verifier.sol  votingManager.sol
contracts/mocks/: MockVerifier.sol
docker/: circuit-compiler.Dockerfile  contract-deployer.Dockerfile
docker/base/: node-base.Dockerfile  quantum-safe.Dockerfile
docker/dev/: Dockerfile
docker/security/: container-security-policy.md
docs/: architecture.md  circuit_design.md  requirements_threatModel.md  technical_specifications.md
docs/Governance, Community, and Business/: DAOIntegrationPlaybook.md  adoptionRoadmap.md  businessModel_and_monetizationPlan.md  feeModel.md  (+1 more)
keys/: voting_0001.zkey.gpg
scripts/: compile-circuits.sh  deploy-contracts.sh  init-dev-env.sh  validate-config.js
src/: Dockerfile
ui/: Dockerfile
(+61 files in other folders)
